# Aegisub

./: .gitmodules  CMakeLists.txt
.github/workflows/: gha-ci.yml
cmake/: FindFFMPEG.cmake
libaegisub/common/: io.cpp
libaegisub/include/libaegisub/: fs.h  io.h
src/: CMakeLists.txt
src/aligner/: CMakeLists.txt  ReadMe.md  _levenshtein.c  aligner.cpp  aligner.h
src/command/: command.cpp  network.cpp
src/common/: CMakeLists.txt
src/common/digest/: CMakeLists.txt  Crc32.cc  Crc32.h  Crc64.cc  Crc64.h  MD5.h  MD5.impl.cpp  MD5.ssl.cc  ReadMe.md  md5.impl.c  md5.impl.h  test_digest.cpp
src/common/encode/: CMakeLists.txt  ReadMe.md  charset.cc  charset.h  test_encode.cpp  utf8.cpp  utf8.h  utf8_test.cpp  utils.cc  utils.h
src/common/json/: CMakeLists.txt  ReadMe.md  json-forwards.h  json.h  jsoncpp.cpp  test_json.cpp  utils.cc  utils.h
src/common/network/: AliClient.cpp  AliClient.h  AliRequest.cpp  AliRequest.h  AsyncCallerContext.cpp  AsyncCallerContext.h  CMakeLists.txt  ClientConfiguration.cpp  ClientConfiguration.h  CoreClient.cpp  CoreClient.h  Credentials.cpp  Credentials.h  CurlHttpClient.cpp  HmacSha1Signer.cpp  HttpMessage.cpp  HttpMessage.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  Outcome.h  SqClient.cpp  SqClient.h
src/common/string/: CMakeLists.txt  ReadMe.md  make_string.h  test_string.cpp  utils.cc  utils.h
src/common/uuid/: CMakeLists.txt  ReadMe.md  uuid.cpp  uuid.h
src/libresrc/: default_config.json  default_menu.json
src/recognize/: CMakeLists.txt  FileTrans.cpp  FileTrans.h  NlsToken.cpp  NlsToken.h  dialog_recognize.cpp  dialog_recognize.h  reg2subtitle.cpp  reg2subtitle.h
src/stream/: CMakeLists.txt  audio_op.cpp  audio_op.h
src/subtitle/: CMakeLists.txt  srt_file.cpp  srt_file.h
